# RType-Epitech

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENCE.txt  README.md  build.bat  build.sh  buildRelease.bat  buildRelease.sh  docker-compose.yml  documentation.html
Client/: AnimationComponent.cpp  AnimationComponent.h  AnimationSystem.cpp  AnimationSystem.h  BossCreator.cpp  BossCreator.h  BossCreatorClient.cpp  BossCreatorClient.h  ButtonComponent.cpp  ButtonComponent.h  CMakeLists.txt  ClientNetServer.cpp  ClientNetServer.h  CreateButton.cpp  CreateButton.h  CreateScrollingTexture.cpp  CreateScrollingTexture.h  CreateTextBox.cpp  CreateTextBox.h  DrawFixTextureSystem.cpp  DrawFixTextureSystem.h  DrawSpriteSystem.cpp  DrawSpriteSystem.h  EntityLinkComponent.cpp  EntityLinkComponent.h  FixTextureComponent.cpp  FixTextureComponent.h  GameScene.cpp  GameScene.h  HandshakeResponseConsumer.cpp  HitboxFixComponent.cpp  HitboxFixComponent.h  LobbyScene.cpp  LobbyScene.h  MainMenu.cpp  MainMenu.h  MouseSystem.cpp  MouseSystem.h  Musics.cpp  Musics.h  (+54 more)
Client/Consumers/: DamageConsumer.cpp  DamageConsumer.h  EntityDestroyConsumer.cpp  EntityDestroyConsumer.h  EntityInfoConsumer.cpp  EntityInfoConsumer.h  EntityVelocityPacketConsumer.cpp  EntityVelocityPacketConsumer.h  HandshakeResponseConsumer.cpp  HandshakeResponseConsumer.h  PacketSwitchWeaponConsumer.cpp  PacketSwitchWeaponConsumer.h  PacketWinConsumer.cpp  PacketWinConsumer.h  PingPacketConsumer.cpp  PingPacketConsumer.h  PlayerInfoConsumer.cpp  PlayerInfoConsumer.h  ProjectileHitConsumer.cpp  ProjectileHitConsumer.h  ScoreConsumer.cpp  ScoreConsumer.h  StartGameConsumer.cpp  StartGameConsumer.h
Client/Player/: Player.cpp  Player.h  PlayerKeysSystem.cpp  PlayerKeysSystem.h  PlayerMoveSystem.cpp  PlayerMoveSystem.h  PlayerShootSystem.cpp  PlayerShootSystem.h
Client/Sprites/: DrawSpriteSystem.cpp  SpriteComponent.cpp  SpriteComponent.h  Sprites.cpp  Sprites.h
Client/Textures/: CooldownComponent.cpp  CooldownComponent.h  CooldownSystem.cpp  CooldownSystem.h  CreateButton.cpp  CreateButton.h  CreateHud.cpp  CreateHud.h  CreateScrollingTexture.cpp  CreateScrollingTexture.h  DrawTextureNameSystem.cpp  FixTextureComponent.cpp  FixTextureComponent.h  HudCooldownComponent.cpp  HudCooldownComponent.h  LifeComponent.cpp  LifeComponent.h  LifeSystem.cpp  LifeSystem.h  ScrollingTextureComponent.cpp  ScrollingTextureComponent.h  Textures.cpp  Textures.h  createFixTexture.cpp  createFixTexture.h
Client/ray/: RaylibAnimation.cpp  RaylibAnimation.h  RaylibGraphicLib.cpp  RaylibGraphicLib.h  RaylibMouse.cpp  RaylibMouse.h  RaylibMusic.cpp  RaylibMusic.h  RaylibSound.cpp  RaylibSound.h  RaylibTexture.cpp  RaylibTexture.h  RaylibWindow.cpp  RaylibWindow.h
Engine/: BossCreator.cpp  BossCreator.h  CMakeLists.txt  CollectableModule.cpp  CollectableModule.h  ColliderHitboxSystem.cpp  ColliderHitboxSystem.h  CountRegistry.h  CreateBoss.cpp  CreateBoss.h  Engine.cpp  Engine.h  EngineTypes.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityType.h  EntityUtils.cpp  EntityUtils.h  EventConsumers.cpp  EventConsumers.h  GraphicLib.cpp  GraphicLib.h  Hitbox.cpp  Hitbox.h  IComponent.h  IConsumer.cpp  IConsumer.h  IPacket.cpp  IPacket.h  ISocket.cpp  ISocket.h  ISystem.cpp  ISystem.h  Level.cpp  Level.h  LuaWrapper.h  PacketDeserializer.cpp  PacketDeserializer.h  (+23 more)
Engine/Component/: AccelerationComponent.cpp  AccelerationComponent.h  AccelerationPhysicComponent.cpp  AccelerationPhysicComponent.h  CollectableComponent.cpp  CollectableComponent.h  ColliderComponent.cpp  ColliderComponent.h  CooldownComponent.cpp  CooldownComponent.h  EntityTypeComponent.cpp  EntityTypeComponent.h  EntityTypeComponent2.cpp  EntityTypeComponent2.h  HealthComponent.cpp  HealthComponent.h  HitboxComponent.cpp  HitboxComponent.h  IAComponent.h  IComponent.cpp  IComponent.h  InanimateComponent.cpp  InanimateComponent.h  MaxVelocityComponent.cpp  MaxVelocityComponent.h  PhysicComponent.cpp  PhysicComponent.h  PlayerInfoComponent.cpp  PlayerInfoComponent.h  PositionComponent.cpp  PositionComponent.h  ProjectileComponent.cpp  ProjectileComponent.h  ShooterComponent.cpp  ShooterComponent.h  TeamComponent.cpp  TeamComponent.h  VelocityComponent.cpp  VelocityComponent.h  WeaponComponent.cpp  (+1 more)
Engine/Graphic/: ColorCodes.h  IAnimation.h  IGraphicLib.cpp  IGraphicLib.h  IMouse.h  IMusic.h  ISound.h  ITexture.h  IWindow.h  KeyCodes.h  Sprite.cpp  Sprite.h  SpriteProperty.cpp  SpriteProperty.h  SpriteSheet.cpp  SpriteSheet.h  Vector2f.cpp  Vector2f.h  Vector2i.cpp  Vector2i.h
Engine/Network/: CrossPlatformSocket.cpp  CrossPlatformSocket.h  ISocket.h  NetServer.cpp  NetServer.h  NetworkClient.cpp  (+12 more)
Pong/: BallBounceSystem.cpp  BallBounceSystem.h  BallComponent.cpp  BallComponent.h  ButtonComponent.h  CMakeLists.txt  DrawFixTextureSystem.h  FixTextureComponent.h  GameScene.cpp  GameScene.h  MainMenu.cpp  MainMenu.h  PlayerComponent.cpp  PlayerComponent.h  PlayerKeys.cpp  PlayerKeys.h  PlayerKeysSystem.cpp  PlayerKeysSystem.h  PlayerMoveSystem.cpp  PlayerMoveSystem.h  Pong.h  PongVelocitySystem.cpp  PongVelocitySystem.h  Scenes.cpp  Scenes.h  Sounds.cpp  Sounds.h  Textures.cpp  Textures.h  WinConditionSystem.cpp  WinConditionSystem.h  main.cpp
Ray/: CMakeLists.txt
Server/: BossCreator.cpp  BossCreator.h  BossCreatorServer.cpp  BossCreatorServer.h  BossSystem.cpp  BossSystem.h  CMakeLists.txt  ClientData.cpp  ClientData.h  CooldownComponent.cpp  CooldownComponent.h  EndlessLevel.cpp  EndlessLevel.h  EnemyInfoComponent.cpp  EnemyInfoComponent.h  EnemyRandomSpawnSystem.cpp  EnemyRandomSpawnSystem.h  EnemyShootSystem.cpp  EnemyShootSystem.h  HandshakeConsumer.cpp  HandshakeConsumer.h  LevelSystem.cpp  LevelSystem.h  Levels.cpp  Levels.h  PacketSendingScene.cpp  PacketSendingScene.h  PingPacketConsumer.cpp  PingPacketConsumer.h  PlayerCollision.cpp  PlayerCollision.h  PlayerInfoComponent.cpp  PlayerInfoComponent.h  PlayerList.cpp  PlayerList.h  PlayerMoveConsumer.cpp  PlayerMoveConsumer.h  PlayerShootConsumer.cpp  PlayerShootConsumer.h  ProjUtils.cpp  (+21 more)
(+107 files in other folders)
